// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFieldProps reduces all props on keys 1`] = `
Object {
  "one": Object {
    "id": "one",
    "onChange": "onChange-one",
    "value": "one",
  },
  "two": Object {
    "id": "two",
    "onChange": "onChange-two",
    "value": "two",
  },
}
`;

exports[`getFieldProps spreads passThrough from state if it exists 1`] = `
Object {
  "one": Object {
    "id": "one",
    "key": "key-one",
    "onChange": "onChange-one",
    "value": "one",
  },
  "two": Object {
    "id": "two",
    "onChange": "onChange-two",
    "value": "two",
  },
}
`;
